--- a/nicnbk-ui-angular2/src/app/news/view/news-list.component.html
+++ b/nicnbk-ui-angular2/src/app/news/view/news-list.component.html
@@ -6,6 +6,32 @@
     });
 </script>
 
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        .loader {
+            border: 16px solid #f3f3f3;
+            border-radius: 50%;
+            border-top: 16px solid #3498db;
+            width: 120px;
+            height: 120px;
+            -webkit-animation: spin 2s linear infinite; /* Safari */
+            animation: spin 2s linear infinite;
+        }
+
+        /* Safari */
+        @-webkit-keyframes spin {
+            0% { -webkit-transform: rotate(0deg); }
+            100% { -webkit-transform: rotate(360deg); }
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
+</head>
+
 
 <div class="container">
     <div class="row top-buffer" >
@@ -321,12 +347,13 @@
             <div class="modal fade" id="newsModal" role="dialog">
                     <div class="modal-dialog" style="overflow-y: scroll; max-height:85%;  margin-top: 50px; margin-bottom:50px; width:65%;">
                         <div class="modal-content" style="background-color: #fff1e0">
-                            <div class="row top-buffer" *ngIf="selectedNews == null">
-                                <div class="col-md-12">
-                                    <div class="alert alert-danger">Error loading news details</div>
-                                </div>
-                                {{selectedNews}}
-                            </div>
+                            <!--<div class="row top-buffer" *ngIf="selectedNews == null">-->
+                                <!--<div class="col-md-12">-->
+                                    <!--<div class="alert alert-danger">Error loading news details</div>-->
+                                <!--</div>-->
+                                <!--{{selectedNews}}-->
+                            <!--</div>-->
+                            <div class="loader" *ngIf="selectedNews == null"></div>
                             <div class="row withpadding">
                                 <div class="col-md-12">
                                     <div class="form-group">
