--- a/nicnbk-ui-angular2/src/app/news/view/news-list.component.html
+++ b/nicnbk-ui-angular2/src/app/news/view/news-list.component.html
@@ -13,8 +13,9 @@
             border: 16px solid #f3f3f3;
             border-radius: 50%;
             border-top: 16px solid #3498db;
-            width: 120px;
-            height: 120px;
+            border-bottom: 16px solid #3498db;
+            width: 60px;
+            height: 60px;
             -webkit-animation: spin 2s linear infinite; /* Safari */
             animation: spin 2s linear infinite;
         }
