--- a/nicnbk-ui-angular2/src/app/news/view/news-list.component.html
+++ b/nicnbk-ui-angular2/src/app/news/view/news-list.component.html
@@ -10,6 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         .loader {
+            margin-top: 5%;
+            margin-right: auto;
+            margin-left: auto;
+            margin-bottom: 0;
             border: 16px solid #f3f3f3;
             border-radius: 50%;
             border-top: 16px solid #3498db;
