--- a/nicnbk-ui-angular2/src/app/news/view/news-list.component.html
+++ b/nicnbk-ui-angular2/src/app/news/view/news-list.component.html
@@ -14,10 +14,14 @@
             margin-right: auto;
             margin-left: auto;
             margin-bottom: 0;
-            border: 16px solid #f3f3f3;
-            border-radius: 50%;
+
             border-top: 16px solid #3498db;
+            border-right: 16px solid #f3f3f3;
+            border-left: 16px solid #f3f3f3;
             border-bottom: 16px solid #3498db;
+
+            border-radius: 50%;
+
             width: 60px;
             height: 60px;
             -webkit-animation: spin 2s linear infinite; /* Safari */
