1) NB Reporting: - Capital calls exporting - Comments for adjusted redemptions (Singularity GL form)
2) PE
- M2S2 memo adjustments
- Firm and Fund profile

--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -140,7 +140,7 @@
                     <ul class="dropdown-menu">
                         <li><a [routerLink]="['/reporting/NBReporting']">NB Reports</a></li>
                         <!--<li role="separator" class="divider"></li>-->
-                        <li><a [routerLink]="['/reporting/NBReporting/reserveCalculation']">Reserve Calculation</a></li>
+                        <li><a [routerLink]="['/reporting/NBReporting/reserveCalculation']">Capital Calls</a></li>
 
                     </ul>
                 </li>
