--- a/nicnbk-ui-angular2/src/app/reporting/view/input.file.upload.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/input.file.upload.nb.reporting.component.html
@@ -61,9 +61,9 @@
                         <span class="glyphicon glyphicon-trash"></span>
                     </button>
 
-                    <a data-toggle="modal" data-target="#infoModal" (click)="getInfo('tarragon_schedule_investment')" style="cursor: pointer">
-                        <span class="glyphicon glyphicon-question-sign"></span>
-                    </a>
+                    <!--<a data-toggle="modal" data-target="#infoModal" (click)="getInfo('tarragon_schedule_investment')" style="cursor: pointer">-->
+                        <!--<span class="glyphicon glyphicon-question-sign"></span>-->
+                    <!--</a>-->
                 </td>
             </tr>
             <tr>
@@ -97,9 +97,9 @@
                         <span class="glyphicon glyphicon-trash"></span>
                     </button>
 
-                    <a data-toggle="modal" data-target="#infoModal" (click)="getInfo('tarragon_statement_assets')" style="cursor: pointer">
-                        <span class="glyphicon glyphicon-question-sign"></span>
-                    </a>
+                    <!--<a data-toggle="modal" data-target="#infoModal" (click)="getInfo('tarragon_statement_assets')" style="cursor: pointer">-->
+                        <!--<span class="glyphicon glyphicon-question-sign"></span>-->
+                    <!--</a>-->
                 </td>
             </tr>
             <tr>
@@ -133,9 +133,9 @@
                         <span class="glyphicon glyphicon-trash"></span>
                     </button>
 
-                    <a data-toggle="modal" data-target="#infoModal" (click)="getInfo('tarragon_statement_cashflows')" style="cursor: pointer">
-                        <span class="glyphicon glyphicon-question-sign"></span>
-                    </a>
+                    <!--<a data-toggle="modal" data-target="#infoModal" (click)="getInfo('tarragon_statement_cashflows')" style="cursor: pointer">-->
+                        <!--<span class="glyphicon glyphicon-question-sign"></span>-->
+                    <!--</a>-->
                 </td>
             </tr>
             <tr>
@@ -169,9 +169,9 @@
                         <span class="glyphicon glyphicon-trash"></span>
                     </button>
 
-                    <a data-toggle="modal" data-target="#infoModal" (click)="getInfo('tarragon_statement_changes')" style="cursor: pointer">
-                        <span class="glyphicon glyphicon-question-sign"></span>
-                    </a>
+                    <!--<a data-toggle="modal" data-target="#infoModal" (click)="getInfo('tarragon_statement_changes')" style="cursor: pointer">-->
+                        <!--<span class="glyphicon glyphicon-question-sign"></span>-->
+                    <!--</a>-->
 
                 </td>
             </tr>
@@ -434,9 +434,9 @@
                         <span class="glyphicon glyphicon-trash"></span>
                     </button>
 
-                    <a data-toggle="modal" data-target="#infoModal" (click)="getInfo('singularity_general_ledger')" style="cursor: pointer">
-                        <span class="glyphicon glyphicon-question-sign"></span>
-                    </a>
+                    <!--<a data-toggle="modal" data-target="#infoModal" (click)="getInfo('singularity_general_ledger')" style="cursor: pointer">-->
+                        <!--<span class="glyphicon glyphicon-question-sign"></span>-->
+                    <!--</a>-->
                 </td>
             </tr>
             <tr>
@@ -469,9 +469,9 @@
                         <span class="glyphicon glyphicon-trash"></span>
                     </button>
 
-                    <a data-toggle="modal" data-target="#infoModal" (click)="getInfo('singularity_noal_a')" style="cursor: pointer">
-                        <span class="glyphicon glyphicon-question-sign"></span>
-                    </a>
+                    <!--<a data-toggle="modal" data-target="#infoModal" (click)="getInfo('singularity_noal_a')" style="cursor: pointer">-->
+                        <!--<span class="glyphicon glyphicon-question-sign"></span>-->
+                    <!--</a>-->
                 </td>
             </tr>
             <tr>
@@ -505,9 +505,9 @@
                         <span class="glyphicon glyphicon-trash"></span>
                     </button>
 
-                    <a data-toggle="modal" data-target="#infoModal" (click)="getInfo('singularity_noal_b')" style="cursor: pointer">
-                        <span class="glyphicon glyphicon-question-sign"></span>
-                    </a>
+                    <!--<a data-toggle="modal" data-target="#infoModal" (click)="getInfo('singularity_noal_b')" style="cursor: pointer">-->
+                        <!--<span class="glyphicon glyphicon-question-sign"></span>-->
+                    <!--</a>-->
                 </td>
             </tr>
         </table>
